k8s-dev/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  # Selector & Labels is how Deployment identifies what Pods it's supposed to manage
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: miller222111/multi-client
          imagePullPolicy: IfNotPresent
          ports:
          # This is mapped up to multi-client image
            - containerPort: 3000
